Closed Bug 1546019 Opened 6 years ago Closed 6 years ago

Caret would not appear on input field if open web page in Current Tab

Categories

(Core :: DOM: Navigation, defect)

68 Branch
x86_64
Windows 10
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla68
Tracking Status
firefox-esr60 --- unaffected
firefox66 --- unaffected
firefox67 --- unaffected
firefox68 --- fixed

People

(Reporter: alice0775, Assigned: emilio)

References

(Regression)

Details

(Keywords: nightly-community, regression)

Attachments

(1 file)

Reproducible: always:

Steps to reproduce:

  1. Open https://www.google.com/ in new tab
  2. (optionally) Click on Input field in the page

Actual Results:
Caret would appear. But I can type text.
After switch to another application or tab, then the caret appears.

Expected Resilts:
Caret should appear

Regression window:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=b97df75c9365a162675d962354083af7b5fb40b9&tochange=98adabf295d0bdd1d48cf715fb8ac8ea4ead8766

Regressed by:
98adabf295d0 Kyle Machulis — Bug 1542415 - Pref on frameloader rebuilding by default; r!nika r=nika

:kmachulis,
Your patch seems to cause thw regression. Can you please look into this?

Flags: needinfo?(kyle)

Sorry correction,

Steps to reproduce:

  1. Open https://www.google.com/ in current tab
  2. (optionally) Click on Input field in the page

And this happens not only Google but also any web page if open in Current Tab.

Summary: Caret would not appear on Google top page search field → Caret would not appear on input field if open web page in Current Tab
Has Regression Range: --- → yes
Has STR: --- → yes

I am not sure Document Nagivation is the right component or not.

Component: General → Document Navigation

I've also experienced this issue, it also happens on various sites where there are input fields for login in.

In case this helps narrow, I found that switching to another existing tab and coming back to the tab with the issue fixes the issue (no need to reload anything).

Assignee: nobody → kyle
Flags: needinfo?(kyle)

:mats, I was pointed at you to talk to about this because it's apparently something to do with layout.

The current STR after backout:

  1. In about:config, set fission.rebuild_frameloaders_on_remoteness_change to true
  2. Follow steps in Comment 0

Not real sure where to start on this since I'm not really familiar with layout, but due to the fact that, with this pref, we're rebuilding frameloaders without actually doing xulbrowser bring up, I figure there's probably some step in the process that we're missing.

Flags: needinfo?(mats)

Bug 1546022 may also be related to this issue.

ni?'ing emilio in since they offered to help earlier today too. :)

Flags: needinfo?(emilio)

Annnd also bug 1546103, though I had problems repro'ing that. I've been centralizing on this bug because it was the first 100% repro I could use.

I took a look and this and I think I have a fix.

Assignee: kyle → emilio
Flags: needinfo?(emilio)
Flags: needinfo?(mats)

Not quite sure what's a good way to add a test for this... Ideas?

Not real sure about how we're gonna run tests on this, especially since it already managed to land once with everything passing.

As for the browser not running destroy: I haven't seen any residuals from page changes so far using this patch, but I'm also not familiar with layout at all, so not quite sure what to be expecting.

Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/d6564ee9d941 When a focused browser changes remoteness, make sure to activate the remote browser if needed. r=qdot
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla68
QA Whiteboard: [good first verify]
Regressions: 1559663
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: