Bug 1546019 - When a focused browser changes remoteness, make sure to activate the remote browser if needed. r=qdot

Not quite sure what's a good way to add a test for this... Ideas?

Differential Revision: https://phabricator.services.mozilla.com/D29104